# gizmo-lang

./: .gitignore  .replit  CMakeLists.txt  LICENSE.md  README.md  a.out  ast.c  ast.h  build.sh  compiler.c  foo.gizmo  generator.c  generator.h  gizmo  gizmoc  lexer.c  lexer.h  main  main.sh  parser.c  parser.h  run_afl.sh  run_tests.sh  scanner.c  scanner.h  symbol.c  symbol.h  test.gizmo  tools.c  tools.h
afl-input/: hello.gizmo
examples/: blocks.gizmo  functions.gizmo  hello.gizmo  input.gizmo  loops.gizmo  loops_with_breaks.gizmo  variables.gizmo
src/: CMakeLists.txt  ast.c  ast.h  codegen.c  codegen.h  compiler.c  parser.c  scanner.c  scanner.h  streambuf.c  streambuf.h
src/back-end/: codegen.c  codegen.h  heap.c  heap.h  linked-l.c  linked-l.h  lists.c  str_tracker.c  str_tracker.h  strs.c  strs.h
src/common/: log.c
src/common/include/: log.h
src/front-end/: ast.c  ast.h  parser.c  parser.h  scanner.c  scanner.h  symbols.c  symbols.h
src/gizmo-back-end/: codegen.c
tests/: __init__.py  compile_time_tests.py  gizmo_tests.py  run_time_tests.py  tests.py
